# configuronic

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
configuronic/: __init__.py  __main__.py  cli.py  config.py
examples/: basic.py
tests/: test_cli.py  test_config.py  test_main.py
tests/support_package/: cfg.py  cfg2.py  cfg3.py  main_runner.py
