[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "configuronic"
version = "0.1.0"
description = "Simple yet powerful \"Configuration as Code\" library"
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [
    {name = "Positronic Robotics", email = "hi@positronic.ro"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = ["configuration", "config", "dependency-injection", "yaml"]
requires-python = ">=3.8"
dependencies = [
    "PyYAML",
    "fire"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "numpy"  # for examples
]

[project.urls]
Homepage = "https://github.com/Positronic-Robotics/configuronic"
Repository = "https://github.com/Positronic-Robotics/configuronic"
Issues = "https://github.com/Positronic-Robotics/configuronic/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["configuronic*"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
